# PaddleOCR-Android-Demo

./: build.gradle
.github/workflows/: android-ci.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/baidu/paddle/lite/demo/ocr/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
